--- a/Nobita.html
+++ b/Nobita.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body onload="docReady()" >
-<img id="nobita" scr="C:/Users/Quang/Desktop/nobita.jpg" style="position:absolute;left:0; top:0;" height="200" width="80"/>
+<img id="nobita" src="nobita.jpg" style="position:absolute;left:1; top:1;" height="90" width="100"/>
 <script>
 function upArrowPressed() {
     var element = document.getElementById("nobita");
